# ocpp-binding-rs

./: Cargo.toml  Fulup-README  README.md
afb-test/: Cargo.toml
afb-test/etc/: binding-bia-power.json  binding-test-ocpp-16.json  binding-test-ocpp-16.sh  start-test-ocpp-16.sh
afb-test/src/: libso.rs  ocpp-16-test.rs
examples/: Cargo.toml
examples/test/: binding-test.rs
ocpp-lib/: Cargo.toml
ocpp-lib/src/: enums-v106.rs  enums-v201.rs  lib.rs  manager.rs  ocpp-utils.rs  utils.rs
ocpp-lib/src/schema-v106/messages/: authorize.rs  boot_notification.rs  cancel_reservation.rs  change_availability.rs  change_configuration.rs  clear_cache.rs  clear_charging_profile.rs  data_transfer.rs  diagnostics_status_notification.rs  firmware_status_notification.rs  get_composite_schedule.rs  get_configuration.rs  meter_values.rs  remote_start_transaction.rs  remote_stop_transaction.rs  reserve_now.rs  reset.rs  send_local_list.rs  set_charging_profile.rs  start_transaction.rs  status_notification.rs  stop_transaction.rs  trigger_message.rs  unlock_connector.rs
ocpp-lib/src/schema-v201/datatypes/: ac_charging_parameters_type.rs  additional_info_type.rs  apn_type.rs  certificate_hash_data_chain_type.rs  certificate_hash_data_type.rs  charging_limit_type.rs  charging_needs_type.rs  charging_profile_criterion_type.rs  charging_profile_type.rs  charging_schedule_type.rs  clear_charging_profile_type.rs  clear_monitoring_result_type.rs  component_variable_type.rs  composite_schedule_type.rs  cost_type.rs  event_data_type.rs  get_variable_data_type.rs  get_variable_result_type.rs  id_token_info_type.rs  id_token_type.rs  message_content_type.rs  message_info_type.rs  network_connection_profile_type.rs  ocsp_request_data_type.rs  sampled_value_type.rs  set_monitoring_data_type.rs  set_monitoring_result_type.rs  set_variable_data_type.rs  set_variable_result_type.rs  transaction_type.rs  variable_attribute_type.rs  variable_characteristics_type.rs  variable_monitoring_type.rs  vpn_type.rs
ocpp-lib/src/schema-v201/messages/: authorize.rs  boot_notification.rs  cancel_reservation.rs  certificate_signed.rs  change_availability.rs  clear_cache.rs  clear_charging_profile.rs  clear_display_message.rs  clear_variable_monitoring.rs  cleared_charging_limit.rs  customer_information.rs  datatransfer.rs  delete_certificate.rs  firmware_status_notification.rs  get_15118ev_certificate.rs  get_base_report.rs  get_certificate_status.rs  get_charging_profiles.rs  get_composite_schedule.rs  get_display_message.rs  get_installed_certificate_ids.rs  get_log.rs  get_monitoring_report.rs  get_report.rs  get_variables.rs  install_certificate.rs  log_status_notification.rs  meter_values.rs  notify_charging_limit.rs  notify_display_messages.rs  notify_ev_charging_needs.rs  notify_ev_charging_schedule.rs  notify_event.rs  notify_monitoring_report.rs  notify_report.rs  publish_firmware.rs  publish_firmware_status_notification.rs  report_charging_profiles.rs  (+20 more)
(+18 files in other folders)
