[package]
name = "ocpp-test"
version = "0.1.0"
authors = ["fulup@iot.bzh"]
build = "etc/build.rs"
edition = "2021"

[dependencies]
afbv4 = {git= "https://github.com/redpesk-common/afb-librust", branch="master", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json={ version= "1.0"}
ocpp= {path ="../ocpp-lib"}
typesv4= {path ="../afb-types"}

[[example]]
# optional test use:  clear && cargo build --example ocpp_test
name = "ocpp_test"
crate-type = ["cdylib"]
path = "src/libso.rs"

