[package]
name = "ocpp-test"
version = "0.1.0"
authors = ["fulup@iot.bzh"]

[dependencies]
afbv4 = {git= "https://github.com/redpesk-common/afb-librust", branch="master", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json={ version= "1.0"}
libocpp= {path ="../ocpp-lib"}
chrono = { version = "0.4", default-features = false, features = ["serde"] }

[[example]]
# optional test use:  clear && cargo build --example ocpp_test
name = "ocpp_test"
crate-type = ["cdylib"]
path = "test/binding-test.rs"

