[package]
name = "libocpp"
version = "0.0.1"
edition = "2021"
authors = ["Fulup Le Foll <fulup@iot.bzh>"]
publish = false

[dependencies]
afbv4 = {git= "https://github.com/redpesk-common/afb-librust", branch="master", optional = true}
rust-ocpp = { version = "0.3", features = ["v2_0_1", "v1_6"] }
strum_macros = "0.25"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json={ version= "1.0"}

[lib]
name = "libocpp"
crate-type = ["lib"]
path = "src/lib.rs"


